Nuevas funcionalidades, web responsive, solucion de errores

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="keywords" content="bicicletas, bikes, accesorios, indumentaria, scott, trek, specialized, cannondale">
+    <meta name="description" content="EliaBikes negocio de venta de bicicletas y accesorios de ciclismo">
+    <meta name="author" content="Joaquin Elia">
+    <meta name="copyright" content="EliaBikes">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
@@ -21,7 +20,7 @@
     />
     <!--cdn css bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>EliaBikes</title>
+    <title>EliaBikes venta de bicicletas y accesorios de ciclismo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app</noscript>
